<resources>
    <string name="app_name">NavDrawerApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">RICHARD PAREDES Navigation Drawer</string>
    <string name="nav_header_subtitle">richardParedes@senati.pe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Mostrar diapositivas</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_direccion">Direccion</string>
    <string name="menu_noticias">Noticias</string>
    <string name="menu_email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>