<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_ajustes" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_calendar_month_24"
            android:title="@string/menu_calendario" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_event_note_24"
            android:title="@string/menu_direccion" />
        <item
            android:id="@+id/ajustes"
            android:icon="@drawable/baseline_chat_24"
            android:title="@string/menu_noticias" />
        <item
            android:id="@+id/email"
            android:icon="@drawable/baseline_email_24"
            android:title="@string/menu_email"/>

    </group>
</menu>