<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navdrawerapp.ui.home.HomeFragment"
        android:label="@string/menu_ajustes"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.navdrawerapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_calendario"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.navdrawerapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_direccion"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/ajustes"
        android:name="com.example.navdrawerapp.Ajustes"
        android:label="@string/menu_noticias"
        tools:layout="@layout/fragment_ajustes" />
    <fragment
        android:id="@+id/calendario"
        android:name="com.example.navdrawerapp.Calendario"
        android:label="fragment_calendario"
        tools:layout="@layout/fragment_calendario" />
    <fragment
        android:id="@+id/email"
        android:name="com.example.navdrawerapp.Email"
        android:label="@string/menu_email"
        tools:layout="@layout/fragment_email" />
</navigation>